syntax = "proto3";

package io.restorecommerce.ostorage;

import "io/restorecommerce/filter.proto";
import "google/protobuf/any.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/attribute.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/options.proto";

service ObjectService {
  rpc Get (GetRequest) returns (stream ObjectResponse) {
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc Put (stream Object) returns (PutResponse);
  rpc Delete (DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc List (ListRequest) returns (ListResponse) {
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc Copy (CopyRequestList) returns (CopyResponseList);
  rpc Move (MoveRequestList) returns (MoveResponseList);
}

message CopyRequestList {
  repeated CopyRequestItem items = 1;
  optional io.restorecommerce.auth.Subject subject = 2;
}

message CopyResponseList {
  repeated copyResponsePayloadWithStatus responses = 1;
  optional io.restorecommerce.status.OperationStatus operation_status = 2;
}

message copyResponsePayloadWithStatus {
  optional CopyResponseItem payload = 1;
  optional io.restorecommerce.status.Status status = 2;
}

message CopyRequestItem {
  optional string bucket = 1;
  optional string copySource = 2;
  optional string key = 3;
  optional io.restorecommerce.meta.Meta meta = 4;
  optional Options options = 5;
}

message CopyResponseItem {
  optional string bucket = 1;
  optional string copySource = 2;
  optional string key = 3;
  optional io.restorecommerce.meta.Meta meta = 4;
  optional Options options = 5;
}

message Options {
  optional string encoding = 1;
  optional string content_type = 2;
  optional string content_language = 3;
  optional string content_disposition = 4;
  optional int32 length = 5;
  optional string version = 6;
  optional string md5 = 7;
  repeated io.restorecommerce.attribute.Attribute tags = 8;
  optional google.protobuf.Any data = 9; // optional meta data ex: from and to dates
}

message Object {
  optional string key = 1;
  optional string bucket = 2;
  optional bytes object = 3;
  optional io.restorecommerce.meta.Meta meta = 4;
  optional string url = 5;
  optional Options options = 6;
  optional io.restorecommerce.auth.Subject subject = 7;
}

message ObjectResponse {
  optional ObjectResponsePayloadWithStatus response = 1;
  optional io.restorecommerce.status.OperationStatus operation_status = 2;
}

message ObjectResponsePayloadWithStatus {
  optional ObjectResponsePayload payload = 1;
  optional io.restorecommerce.status.Status status = 3;
}

message ObjectResponsePayload {
  optional string key = 1;
  optional string bucket = 2;
  optional bytes object = 3;
  optional io.restorecommerce.meta.Meta meta = 4;
  optional string url = 5;
  optional Options options = 6;
}

message GetRequest {
  optional string key = 1;
  optional string bucket = 2;
  optional bool download = 3;
  optional io.restorecommerce.auth.Subject subject = 4;
}

message ListResponse {
  repeated ObjectsDataWithPayloadStatus responses = 1;
  optional io.restorecommerce.status.OperationStatus operation_status = 2;
}

message ObjectsDataWithPayloadStatus {
 optional ObjectData payload = 1;
 optional io.restorecommerce.status.Status status = 2;
}

message ObjectData {
  optional string object_name = 1;
  optional string url = 2;
  optional io.restorecommerce.meta.Meta meta = 3;
}

message DeleteRequest {
  optional string key = 1;
  optional string bucket = 2;
  optional io.restorecommerce.auth.Subject subject = 3;
}

message PutResponse {
  optional PutResponseWithPayloadStatus response = 1;
  optional io.restorecommerce.status.OperationStatus operation_status = 2;
}

message PutResponseWithPayloadStatus {
  optional Response payload = 1;
  optional io.restorecommerce.status.Status status = 2;
}

message Response {
  optional string url = 1;
  optional string bucket = 2 ;
  optional string key = 3;
  optional io.restorecommerce.meta.Meta meta = 4;
  repeated io.restorecommerce.attribute.Attribute tags = 5;
  optional int32 length = 6; // file size of uploaded object
}

message ListRequest {
  optional string bucket = 1;
  optional io.restorecommerce.filter.FilterOp filters = 2; // Filter based on fieldName|operation, value|list
  optional io.restorecommerce.auth.Subject subject = 3;
  optional int32 max_keys = 4;
  optional string prefix = 5;
}

// OstorageMessage is used for emitting
// objectUploaded and objectDownloaded events
message OstorageMessage {
  optional string key = 1;
  optional string bucket = 2;
  optional google.protobuf.Any metadata = 3;
  optional io.restorecommerce.auth.Subject subject = 4;
}

message MoveRequestList {
  repeated MoveRequestItem items = 1;
  optional io.restorecommerce.auth.Subject subject = 2;
}

message MoveRequestItem {
  optional string bucket = 1; // destination bucket name
  optional string sourceObject = 2; // source object with bucket name
  optional string key = 3; // destination key name
  optional io.restorecommerce.meta.Meta meta = 4;
  optional Options options = 5;
}

message MoveResponseList {
  repeated MoveResponsePayloadWithStatus responses = 1;
  optional io.restorecommerce.status.OperationStatus operation_status = 2;
}

message MoveResponsePayloadWithStatus {
  optional MoveResponseItem payload = 1;
  optional io.restorecommerce.status.Status status = 2;
}

message MoveResponseItem {
  optional string bucket = 1;
  optional string sourceObject = 2;
  optional string key = 3;
  optional io.restorecommerce.meta.Meta meta = 4;
  optional Options options = 5;
}
